src/test/ui/issues/issue-46332.stderr
error[E0422]: cannot find struct, variant or union type `TyUInt` in this scope
  --> $DIR/issue-46332.rs:9:5
   |
LL | struct TyUint {}
   | ------------- similarly named struct `TyUint` defined here
...
LL |     TyUInt {};
   |     ^^^^^^ help: did you mean `TyUint`? (a similarly named struct)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0422`.
